it's not as simple as I thought

--- a/content/post/ai-models.adoc
+++ b/content/post/ai-models.adoc
@@ -294,3 +294,27 @@ Some routers include:
 
 TIP: You don't have to use a router, but you'll possibly see mention of them which is why I'm mentioning them here.
 Also, because I got confused by `OpenRouter` also being a service provider, not just a router :)
+
+== Addendum: There are Models, and then there are _Models_ (a.k.a. not all Models are LLMs)
+
+As I wrote link:/2025/09/12/stumbling-into-ai-part-3rag/[the third part] in this little voyage of discovery I realised that my understanding of models—as I wrote about them in this article—was incomplete.
+
+There are different types of model, and there are different purposes to which a model is put.
+
+LLMs as I've discussed in this blog post are _generative_.
+They create (generate) new material based on their training over large datasets of text.
+There are other _generative_ models that are not LLMs.
+These include those you might have also heard of like https://openai.com/index/dall-e-2/[DALL-E] and https://www.midjourney.com/home[Midjourney], for generating images.
+There are also models for generating https://huggingface.co/microsoft/VibeVoice-1.5B[speech], https://ace-step.github.io/#RapMachine[music], and https://huggingface.co/alibaba-pai/Wan2.2-VACE-Fun-A14B/blob/main/README_en.md#video-result[video].
+
+Other models that aren't generative do tasks such as:
+
+* Creating embeddings (as used in link:/2025/09/12/stumbling-into-ai-part-3rag/[RAG])
+* Sentiment analysis
+* Anomaly detection
+* Forecasting and prediction
+* Analysing video, image, or audio, e.g.
+** Detecting objects
+** Transcribing speech
+
+TIP: Regardless of the type, what you call a model to get it to do something, it's called _inference_.
