--- a/content/post/ai-ml.adoc
+++ b/content/post/ai-ml.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Stumbling into AI: Part 4—Terminology Tidyup (and a little rant)'
 date: "2025-09-16T13:38:43Z"
-image: "/images/2025/09/"
-thumbnail: "/images/2025/09/"
+image: "/images/2025/09/h_IMG_2281.webp"
+thumbnail: "/images/2025/09/t_IMG_2251.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - AI
@@ -18,9 +18,9 @@ categories:
 
 Having looked at link:/2025/09/04/stumbling-into-ai-part-1mcp/[MCP], link:/2025/09/08/stumbling-into-ai-part-2models/[Models], and link:/2025/09/12/stumbling-into-ai-part-3rag/[RAG], I realised that I've been mentally skirting around something that I don't really understand, so I'm going to exposure myself to some ridicule here and try to figure it out: what's the difference between AI and ML? Aren't they just the same?
 
-Oh, plus a little rant at the end, too.
-
 <!--more-->
+
+== What's the difference between AI and ML?
 
 > _OK we're doing this are we?_
 _I thought AI was just ✨magic✨?_
