--- a/content/post/ai-ml.adoc
+++ b/content/post/ai-ml.adoc
@@ -16,7 +16,7 @@ categories:
 :rouge-css: style
 :rouge-style: monokai
 
-Having looked at link:/2025/09/04/stumbling-into-ai-part-1mcp/[MCP], link:/2025/09/08/stumbling-into-ai-part-2models/[Models], and link:/2025/09/12/stumbling-into-ai-part-3rag/[RAG], I realised that I've been mentally skirting around something that I don't really understand, so I'm going to exposure myself to some ridicule here and try to figure it out: what's the difference between AI and ML? Aren't they just the same?
+Having looked at link:/2025/09/04/stumbling-into-ai-part-1mcp/[MCP], link:/2025/09/08/stumbling-into-ai-part-2models/[Models], and link:/2025/09/12/stumbling-into-ai-part-3rag/[RAG], I realised that I've been mentally skirting around something that I don't really understand, so I'm going to expose myself to some ridicule here and try to understand better: what's the difference between AI and ML? Aren't they just the same?
 
 <!--more-->
 
