--- a/content/post/ai-ml.adoc
+++ b/content/post/ai-ml.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: 'Stumbling into AI: Part 4—Terminology Tidyup (and a little rant)'
+title: 'Stumbling into AI: Part 4—Terminology Tidy-up (and a little rant)'
 date: "2025-09-16T13:38:43Z"
 image: "/images/2025/09/h_IMG_2281.webp"
 thumbnail: "/images/2025/09/t_IMG_2251.webp"
@@ -55,9 +55,9 @@ These ML models include foundational ones like LLMs used for generating text, bu
 Other uses of different model types include clustering, classification, anomaly detection, sentiment analysis, and prediction.
 +
 ML includes terms like _supervised learning_, _unsupervised learning_, and _reinforcement learning_.
-It is also where the cool stuff like neural networks and deep learning fit too (_I am aware how casually I am inserting a whole swathe of academic research here; this is just my mental bracketing exercise, feel free to flame me in the comments below_).
+It is also where the cool stuff like neural networks and deep learning fits too (_I am aware how casually I am inserting a whole swathe of academic research here; this is just my mental bracketing exercise, feel free to flame me in the comments below_).
 
-== My god…it's full of Marketing BS
+== My God…it's full of marketing BS
 
 Just like Cloud and Blockchain were previously, AI has become a lightning rod for every manner of ridiculous marketing claim and overinflated startup valuation.
 
@@ -65,7 +65,7 @@ Just like Cloud, at the heart of AI is a fundamentally _new and important_ techn
 
 *Just like Cloud, it's a fool who dismisses AI as a fad.*
 
-Just like Cloud, it's a reasonable person who wants to take a step back and understand what the af the fuss is _actually_ about.
+Just like Cloud, it's a reasonable person who wants to take a step back and understand what the all the fuss is _actually_ about.
 And that's what I'm trying my best to do in link:/categories/stumbling-into-ai/[this series of blog posts].
 
 TIP: If you spotted the omission of Blockchain in the subsequent statements above, that is not an error 😉
