--- a/content/post/kafka-to-iceberg.adoc
+++ b/content/post/kafka-to-iceberg.adoc
@@ -127,7 +127,7 @@ So, if either of these scenarios apply to your data, how does it impact your too
 
 In **Flink SQL** every unique source schema must be explicitly defined.
 There's no automagic population from a schema registry.
-This means that if you have four different topics you need to declare ten Flink SQL tables.
+This means that if you have four different topics you need to declare eight Flink SQL tables.
 Bear in mind with Flink SQL it's not only the table name but its schema too that needs specifying.
 
 [source,sql]
