Fix links, change images

--- a/content/post/il-2025-09.adoc
+++ b/content/post/il-2025-09.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Interesting links - September 2025'
 date: "2025-09-29T07:04:31Z"
-image: "/images/2025/09/h_IMG_2638.webp"
-thumbnail: "/images/2025/09/t_IMG_2702.webp"
+image: "/images/2025/09/h_IMG_2723.webp"
+thumbnail: "/images/2025/09/t_IMG_2719.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Interesting Links
@@ -11,9 +11,9 @@ categories:
 
 Sneaking it in _just_ before the end of the month!
 
-It's a bumper set of links this month, with an original backlog of 125 links to get through.
+It's a bumper set of links this month—I started with an original backlog of 125 links to get through.
 Some fell by the wayside, but plenty of others (78, to be precise) made the cut.
-With no more ado, let's get cracking!
+With no further ado, let's get cracking!
 
 _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
@@ -26,14 +26,52 @@ This, from Lawrence Kesteloot, is one of them.
 https://www.teamten.com/lawrence/programming/use-singular-nouns-for-database-table-names.html[Use singular nouns for database table names].
 * DuckDB and DuckLake in action in https://developyr.medium.com/the-local-lakehouse-how-i-built-a-production-grade-data-platform-on-my-laptop-508a421efbae[this blog post] from Daniel Wallace
 * Simon Späti has published an in-depth https://www.ssp.sh/blog/practical-data-modeling-clickhouse/[Data Modeling Guide for Real-Time Analytics with ClickHouse]
-* 🔥 It's all kicked off again in the blogosphere, with Daniel Beach calling out the https://www.confessionsofadataguy.com/the-medallion-architecture-farce/[Medallion Architecture Farce], before pondering whether it's https://dataengineeringcentral.substack.com/p/medallion-architecture-truth-or-fiction[Truth or Fiction?] (with a good primer on what it is, IMO).
+* 🔥 It's all kicked off again in the blogosphere, with Daniel Beach calling out the https://www.confessionsofadataguy.com/the-medallion-architecture-farce/[Medallion Architecture Farce], before pondering whether the architecture itself is https://dataengineeringcentral.substack.com/p/medallion-architecture-truth-or-fiction[Truth or Fiction?].
 He also took a moment to raise concerns that https://www.confessionsofadataguy.com/is-data-modeling-dead/[data modeling may be dead].
-Ananth Packkildurai posted https://www.dataengineeringweekly.com/p/revisiting-medallion-architecture[a calm and measured analysis] of the architecture, and Joe Reis reminded us that it is https://practicaldatamodeling.substack.com/p/medallion-architecture-is-not-a-data[NOT a Data Model].
+Ananth Packkildurai posted https://www.dataengineeringweekly.com/p/revisiting-medallion-architecture[a calm and measured analysis] of the architecture, and Joe Reis reminded us that the medallion architecture is https://practicaldatamodeling.substack.com/p/medallion-architecture-is-not-a-data[NOT a Data Model]. I'll even chuck in link:/2022/10/02/data-engineering-in-2022-architectures-terminology/#_reference_architectures[my earlier thoughts on it], in which I draw clear parallels Oracle's reference architecture back in 2013… 😁
++
 Meanwhile, Robert Anderson https://medium.com/@rdo.anderson/the-joke-of-data-vault-generation-1ef8c170ce55[shared] his scepticism of Data Vault.
 * https://duckdb.org/2025/09/16/announcing-duckdb-140[DuckDB 1.4 was released], and with it the first LTS (Long Term Support) version.
 New features include support for writing Apache Iceberg files (see below), `MERGE`, and database encryption.
 * Max Gabrielsson discusses the use of https://duckdb.org/2025/08/08/spatial-joins.html[spatial data in DuckDB] and the improvements made to performance of spatial joins in 1.3.
 * Getting data from Kafka to Snowflake can be done in several different ways; Emma Amor covers two of them in https://freedium.cfd/https://medium.com/ml-cheat-sheet/building-a-modern-real-time-data-streaming-architecture-two-paths-from-kafka-to-snowflake-135a2520fbbf[this blog post].
+
+== AI
+
+[NOTE]
+====
+_Wait, what's this? A new section this month, all about AI?_
+_Is Robin now drinking the hype-juice too?_
+
+Don't worry, this isn't a rebranding of `rmoff.net` to `ai-ai-ai-vc-money.plz` (at least not yet).
+Whilst I've been an avid user _of_ AI for some time now (mostly through link:/categories/raycast/[Raycast]'s AI features), I've started to take an interest in understanding it in more detail.
+This month I wrote up a few note-taking articles as I learn more about link:/2025/09/04/stumbling-into-ai-part-1mcp/[MCP], link:/2025/09/08/stumbling-into-ai-part-2models/[Models], link:/2025/09/12/stumbling-into-ai-part-3rag/[RAG], and link:/2025/09/16/stumbling-into-ai-part-4terminology-tidy-up-and-a-little-rant/[some general rambling and corrections].
+
+**AI is important, and it's here to stay.**
+To the nay-sayers who scoff at the errors it makes and laugh at the idea that it can do our jobs…you are missing the point.
+Some of the attitudes I've encountered give me heavy vibes of Oracle DBAs 15 years ago who derided the idea of "The Cloud".
+That came to pass, completely upending how we build things—and so will AI.
+(We'll ignore Blockchain for now…not every hype turns into reality 😉).
+====
+
+🔥 Sam Newman https://www.linkedin.com/posts/samnewman_to-those-of-you-who-are-deeply-pessimistic-activity-7373683325925900288-gFqC/[posted an excellent note] on LinkedIn, which begins:
+
+> To those of you who are deeply pessimistic around the use of AI in software delivery, the old quote from John Maynard Keynes comes to mind:
+>
+> _**"The market can remain irrational longer than you can remain solvent".**_
+
+Go read the rest of the post (it's not long).
+In addition, Scott Werner's article 🔥 https://worksonmymachine.ai/p/the-only-skill-that-matters-now[The Only Skill That Matters Now] puts it even more clearly into focus, with a nice analogy about how "skating to the puck" is no longer a viable strategy (tl;dr the rate of change in AI means you have no idea where the puck will even be).
+
+The impact of AI going to be felt universally.
+Here are some interesting articles that I've come across this month about it in the sphere of data:
+
+* A paper titled https://arxiv.org/pdf/2509.00997[Supporting Our AI Overlords: Redesigning Data Systems to be Agent-First] discussing the ways in which LLMs want to retrieve data and how we might change how we model data to support that.
+Murat Demirbas has a nice https://muratbuffalo.blogspot.com/2025/09/supporting-our-ai-overlords-redesigning.html[analysis and commentary] on the paper.
+* A summary of a presentation given by Xintong Song on the new https://freedium.cfd/https://medium.com/@Joannahe/flink-agents-an-event-driven-ai-agent-framework-based-on-apache-flink-45688be46dad[Flink Agents] project (a formal sub-project of Apache Flink itself)
+* MCP servers are a nice way to provide standard interoperability between LLMs and other computer systems.
+I've not these ones out specifically but the idea of being able to chat to Claude about https://github.com/cledar/flink-mcp[Flink], https://github.com/kanapuli/mcp-kafka[Kafka], and https://github.com/confluentinc/mcp-confluent[Confluent Cloud] certainly sounds a cool idea :)
+* A https://www.pedronasc.com/articles/lessons-building-ai-data-analyst[good account] from Pedro Nascimento of why what sounds like a simple enough idea ("build an AI-powered data analyst") is a lot more complex than you may think.
 
 == Iceberg (and other OTF/Data Lake stuff)
 
@@ -76,43 +114,6 @@ Read the gory details https://www.pagerduty.com/eng/august-28-kafka-outages-what
 * An example application from Sebastien Viale showing how to https://github.com/michelin/kafka-streams-ensure-explicit-resource-naming[ensure Kafka Streams uses explicit resource naming] (added in Kafka 4.1 with KIP-1111)
 * Details from a talk by Yuan Mei about https://www.alibabacloud.com/blog/flink-state-management-a-journey-from-core-primitives-to-next-generation-incremental-computation_602503[Flink state management].
 
-== AI
-
-[NOTE]
-====
-_Wait, what's this? A new section this month, all about AI?_
-_Is Robin now drinking the hype-juice too?_
-
-Don't worry, this isn't a rebranding of `rmoff.net` to `ai-ai-ai-vc-money.plz` (at least not yet).
-Whilst I've been an avid user _of_ AI for some time now (mostly through link:/categories/raycast/Raycast[Raycast]'s AI features), I've started to take an interest in understanding it in more detail.
-I wrote up a few note-taking articles covering link:/2025/09/04/stumbling-into-ai-part-1mcp/[MCP], link:/2025/09/08/stumbling-into-ai-part-2models/[Models], link:/2025/09/12/stumbling-into-ai-part-3rag/[RAG], and link:/2025/09/16/stumbling-into-ai-part-4terminology-tidyup-and-a-little-rant/[some general rambling and corrections].
-
-AI is important, and it's here to stay.
-To the nay-sayers who scoff at the errors it makes and laugh at the idea that it can do our jobs…you are missing the point.
-Some of the attitudes I've encountered give me heavy vibes of Oracle DBAs 15 years ago who derided the idea of "The Cloud".
-That came to pass, and so will AI.
-(We'll ignore Blockchain for now…not every hype turns into reality 😉).
-====
-
-🔥 Sam Newman https://www.linkedin.com/posts/samnewman_to-those-of-you-who-are-deeply-pessimistic-activity-7373683325925900288-gFqC/[posted an excellent note] on LinkedIn, which begins:
-
-> To those of you who are deeply pessimistic around the use of AI in software delivery, the old quote from John Maynard Keynes comes to mind:
->
-> "The market can remain irrational longer than you can remain solvent".
-
-Go read the rest of the post (it's not long).
-In addition, Scott Werner's article 🔥 https://worksonmymachine.ai/p/the-only-skill-that-matters-now[The Only Skill That Matters Now] puts it even more clearly into focus, with a nice analogy about how "skating to the puck" is no longer a viable strategy (tl;dr the rate of change in AI means you have no idea where the puck will even be).
-
-The impact of AI going to be felt universally.
-Here are some interesting articles that I've come across this month about it in the sphere of data:
-
-* A paper titled https://arxiv.org/pdf/2509.00997[Supporting Our AI Overlords: Redesigning Data Systems to be Agent-First] discussing the ways in which LLMs want to retrieve data and how we might change how we model data to support that.
-Murat Demirbas has a nice https://muratbuffalo.blogspot.com/2025/09/supporting-our-ai-overlords-redesigning.html[analysis and commentary] on the paper.
-* A summary of a presentation given by Xintong Song on the new https://freedium.cfd/https://medium.com/@Joannahe/flink-agents-an-event-driven-ai-agent-framework-based-on-apache-flink-45688be46dad[Flink Agents] project (a formal sub-project of Apache Flink itself)
-* MCP servers are a nice way to provide standard interoperability between LLMs and other computer systems.
-I've not these ones out specifically but the idea of being able to chat to Claude about https://github.com/cledar/flink-mcp[Flink], https://github.com/kanapuli/mcp-kafka[Kafka], and https://github.com/confluentinc/mcp-confluent[Confluent Cloud] certainly sounds a cool idea :)
-* A https://www.pedronasc.com/articles/lessons-building-ai-data-analyst[good account] from Pedro Nascimento of why what sounds like a simple enough idea ("build an AI-powered data analyst") is a lot more complex than you may think.
-
 == General Data Stuff
 
 * 🔥 A thorough history and https://timodechau.com/the-end-of-digital-analytics/[analysis of digital analytics] from Timo Dechau, covering Google Analytics, GA4, and more, up to the current state of affairs.
@@ -125,8 +126,6 @@ I've not these ones out specifically but the idea of being able to chat to Claud
 * Postgres 18 adds the ability to https://www.crunchydata.com/blog/postgres-18-old-and-new-in-the-returning-clause[get current and previous row values] in the `RETURNING` clause which sounds neat.
 * https://github.com/xataio/pgstream[pgstream] is an Apache 2.0 licensed project from Xata that offers Postgres replication to targets including https://github.com/xataio/pgstream/blob/main/docs/tutorials/postgres_kafka.md[Kafka].
 * 🔥 Good https://redmonk.com/sogrady/2025/09/02/documentdb/[analysis] from RedMonk's Stephen O'Grady on the open-source data storage space, including Postgres vs MySQL, MongoDB, and DocumentDB.
-
-
 
 == Data in Action
 
