--- a/content/post/il-2025-09.adoc
+++ b/content/post/il-2025-09.adoc
@@ -7,6 +7,8 @@ thumbnail: "/images/2025/09/t_IMG_2719.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Interesting Links
+aliases:
+- /2025/09/29/interesting-links-september-2025/
 ---
 
 Sneaking it in _just_ before the end of the month!
